LIN-3570/LIN-3571 :: Implement equals & hashCode for Sequence
Change-Id: Ie3f1e952cf454af312a3d5be30634b4777746bf8